# Conversai

./: .gitignore  3D_WEBGL_IMPLEMENTATION_GUIDE.md  DELIVERY_SUMMARY.md  DETERMINISTIC_MEMORY_ARCHITECTURE.md  INTEGRATION_GUIDE.md  ML_Integration_Strategy.md  RAG_SYSTEM_STATUS.md  RAILWAY_TROUBLESHOOTING.md  README.md  accuracy-demo.js  check_railway_deployment.sh  deterministic-memory-migration.sql  direct-ingest.js  ingest-biography.sh  learning-mode-architecture.md  railway.toml  test-complete-system.js  test-rag-queries.js  test-simple.md  trigger-ingestion.js  vercel.json
Project-Documents/: ConversAI_mvp_document.md  ConversAI_prd_document.md  ConversAI_tech_stack.md  KITT_UX_Design_Document.md  KITT_UX_Implementation_Summary.md
conversai/: .env.example  .env.local.example  .env.local.example.safe  .gitignore  .vercelignore  ADVANCED_MEMORY_ARCHITECTURE.md  ANIMATION_SYSTEM_DOCUMENTATION.md  APPLY_MIGRATION_NOW.md  BATCHING_BENEFITS.md  BUG_PREVENTION_ANALYSIS.md  DEBUGGING_NOTES.md  FIXED_READY_TO_TEST.md  FIX_COMPLETE_SUMMARY.md  FIX_DATABASE_ISSUE.md  IMPROVED_MEMORY_APPROACH.md  NEXT_STEPS_ROADMAP.md  (+41 more)
conversai/rag-service/: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  RAILWAY_FIX.md  RAILWAY_SETUP.md  README.md  fly.toml  railway.json
conversai/rag-service/src/: main.rs  main_minimal.rs
conversai/rag-service/src/handlers/: feedback.rs  ingest.rs  mod.rs  query.rs
conversai/rag-service/src/models/: mod.rs
conversai/rag-service/src/services/: chunking.rs  embedding.rs  markdown.rs  mod.rs  retrieval.rs
conversai/rag-service/src/utils/: mod.rs
(+243 files in other folders)
